# reach-plugin-handset

./: .gitmodules  DEPENDENCIES.md  LICENSE  README.md  SOURCES.md  pyproject.toml  reach-plugin.json  ui.py
.github/workflows/: windows-agent.yml
agent/: agent.py
agent/windows/: BUILD.md  build-windows.ps1
agent/windows/input-provider/: HogwartsInputProvider.ps1  README.md  pipe-bridge.ps1
hogwarts/: __init__.py  banner.py  h264dec.py  keepstream.py  net.py  page.py  store.py  theme.py  widgets.py
hogwarts/backend/: CONTRACT.md  __init__.py  client.py  config.py
hogwarts/panels/: __init__.py  agents.py  channel.py  console.py  desktop_viewer.py  egress.py  file_explorer.py  listener.py  log.py  ops.py  plane.py
lab/: personal_setup.sh  upgrade_plane.sh
plane/: server.py
scripts/: build-agent-linux.sh  build-windows-agent.sh
