[project]
name = "hogwarts"
version = "0.5.71"
description = "Reach plugin for command-and-control (Hogwarts)"
requires-python = ">=3.10"
dependencies = [
  "keepstream @ git+https://github.com/digitizable/keepstream.git@main",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
include = ["hogwarts*"]
